# tadaa

./: Cargo.toml  README.md  flake.nix
assets/: leafblower.kra  leafblower.kra~  tada.webm
src/: confetti.rs  hsv_to_rgb.rs  main.rs  shader.wgsl  sim.rs
