[package]
name = "tadaa"
version = "0.1.0"
edition = "2024"

[dependencies]
smithay-client-toolkit = { version = "0.19.2" }
wgpu = "29.0.3"
env_logger = "0.11.10"
raw-window-handle = "0.6.0"
wayland-client = {version = "0.31.14", features = ["system"] }
pollster = "0.3.0"
bytemuck = "1.25.0"
rand = "0.10.1"
