[package]
name = "tadaa"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"
description = "GPU rendered confetti overlay for wayland"
keywords = ["confetti", "wgpu", "particles", "overlay", "wayland"]
repository = "https://github.com/Kn4ughty/tadaa"

[dependencies]
smithay-client-toolkit = { version = "0.19.2" }
wgpu = "29.0.3"
env_logger = "0.11.10"
raw-window-handle = "0.6.0"
wayland-client = {version = "0.31.14", features = ["system"] }
pollster = "0.3.0"
bytemuck = "1.25.0"
rand = "0.10.1"
clap = { version = "4.6.1", features = ["derive"] }
image = "0.25.10"
